--- a/ThinkWhat/Controllers/App/Feed/CategoryCollectionController/CategoryCollectionViewCell.xib
+++ b/ThinkWhat/Controllers/App/Feed/CategoryCollectionController/CategoryCollectionViewCell.xib
@@ -25,14 +25,14 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hbk-PG-lQe" customClass="SurveyCategoryIcon" customModule="ThinkWhat" customModuleProvider="target">
-                        <rect key="frame" x="15" y="20" width="70" height="70"/>
+                        <rect key="frame" x="15" y="30" width="70" height="70"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="Hbk-PG-lQe" secondAttribute="height" multiplier="1:1" id="bwb-iE-bo2"/>
                         </constraints>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0LY-59-bgI">
-                        <rect key="frame" x="0.0" y="90" width="100" height="40"/>
+                        <rect key="frame" x="0.0" y="100" width="100" height="30"/>
                         <fontDescription key="fontDescription" name="OpenSans-Semibold" family="Open Sans" pointSize="10"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
@@ -50,12 +50,12 @@
                 <constraint firstItem="Hbk-PG-lQe" firstAttribute="centerX" secondItem="ZTg-uK-7eu" secondAttribute="centerX" id="05j-4d-VuV"/>
                 <constraint firstItem="vtO-Rz-aCP" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="6" id="7bU-2u-1Wb"/>
                 <constraint firstAttribute="trailing" secondItem="vtO-Rz-aCP" secondAttribute="trailing" constant="8" id="9jS-Yt-GAJ"/>
+                <constraint firstItem="Hbk-PG-lQe" firstAttribute="width" secondItem="gTV-IL-0wX" secondAttribute="width" multiplier="0.7" id="EYm-nV-imI"/>
                 <constraint firstItem="0LY-59-bgI" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="EhL-WT-Azo"/>
+                <constraint firstItem="Hbk-PG-lQe" firstAttribute="centerY" secondItem="ZTg-uK-7eu" secondAttribute="centerY" id="L5U-i2-TpM"/>
                 <constraint firstAttribute="trailing" secondItem="0LY-59-bgI" secondAttribute="trailing" id="RIC-jm-e5V"/>
                 <constraint firstItem="0LY-59-bgI" firstAttribute="top" secondItem="Hbk-PG-lQe" secondAttribute="bottom" id="Sex-a9-VXo"/>
-                <constraint firstItem="Hbk-PG-lQe" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="20" id="aCG-pj-FrS"/>
                 <constraint firstAttribute="bottom" secondItem="0LY-59-bgI" secondAttribute="bottom" id="d0a-dm-jGb"/>
-                <constraint firstItem="Hbk-PG-lQe" firstAttribute="width" secondItem="gTV-IL-0wX" secondAttribute="height" multiplier="35:65" id="oCO-cZ-fj4"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="100" height="130"/>
@@ -65,6 +65,7 @@
                 </userDefinedRuntimeAttribute>
             </userDefinedRuntimeAttributes>
             <connections>
+                <outlet property="constraint" destination="EYm-nV-imI" id="eBW-dh-FNs"/>
                 <outlet property="icon" destination="Hbk-PG-lQe" id="8RO-oJ-W1t"/>
                 <outlet property="title" destination="0LY-59-bgI" id="xDQ-Y1-BGc"/>
                 <outlet property="total" destination="vtO-Rz-aCP" id="xZO-VX-vRl"/>
