--- a/ThinkWhat/UI/Banner/SideApp/SideApp.xib
+++ b/ThinkWhat/UI/Banner/SideApp/SideApp.xib
@@ -34,7 +34,7 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TwX-CX-YvI">
                     <rect key="frame" x="0.0" y="0.0" width="300" height="120"/>
                     <subviews>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e6o-Xm-dVA" customClass="YoutubeLogo" customModule="ThinkWhat" customModuleProvider="target">
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e6o-Xm-dVA">
                             <rect key="frame" x="4" y="33" width="54" height="54"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
