--- a/ThinkWhat/Controllers/App/Feed/SurveyStackViewController/SurveyPreview/SurveyPreview.xib
+++ b/ThinkWhat/Controllers/App/Feed/SurveyStackViewController/SurveyPreview/SurveyPreview.xib
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -126,7 +122,7 @@
                         <constraint firstItem="0yw-II-DdQ" firstAttribute="height" secondItem="1jb-gk-6FP" secondAttribute="height" multiplier="0.5" id="hRW-IA-mVI"/>
                     </constraints>
                 </view>
-                <view opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Cb-oL-mY6" customClass="SurveyCategoryIcon" customModule="ThinkWhat" customModuleProvider="target">
+                <view opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Cb-oL-mY6" customClass="Icon" customModule="ThinkWhat" customModuleProvider="target">
                     <rect key="frame" x="202.5" y="39" width="37" height="37"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="4Cb-oL-mY6" secondAttribute="height" multiplier="1:1" id="L3R-yG-IMN"/>
