--- a/ThinkWhat/Controllers/App/Survey/New Group/Banners/InsufficientBalance/InsufficientBalance.xib
+++ b/ThinkWhat/Controllers/App/Survey/New Group/Banners/InsufficientBalance/InsufficientBalance.xib
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -38,7 +34,7 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q8n-wE-sS6">
                     <rect key="frame" x="0.0" y="0.0" width="300" height="75"/>
                     <subviews>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qau-4V-5E0" customClass="SurveyCategoryIcon" customModule="ThinkWhat" customModuleProvider="target">
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qau-4V-5E0" customClass="Icon" customModule="ThinkWhat" customModuleProvider="target">
                             <rect key="frame" x="8" y="9.5" width="56.5" height="56"/>
                             <color key="backgroundColor" red="0.0" green="0.56904578210000001" blue="0.57461684940000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
@@ -67,7 +63,7 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zve-Wt-P2I">
                     <rect key="frame" x="0.0" y="75" width="300" height="75"/>
                     <subviews>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J8m-tL-AQv" customClass="SurveyCategoryIcon" customModule="ThinkWhat" customModuleProvider="target">
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J8m-tL-AQv" customClass="Icon" customModule="ThinkWhat" customModuleProvider="target">
                             <rect key="frame" x="236" y="9.5" width="56" height="56"/>
                             <color key="backgroundColor" red="0.0" green="0.56904578210000001" blue="0.57461684940000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
